--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 scapy>=2.4.5
 psutil>=5.9.0
 rich>=13.0.0
-netaddr>=0.8.0 
+netaddr>=0.8.0
+paramiko>=2.7.0
+python-nmap>=0.6.1
+netifaces>=0.11.0
+pywinrm>=0.4.0 
